fix(css): Support nested select in collapse

--- a/packages/css/src/components/collapse.css
+++ b/packages/css/src/components/collapse.css
@@ -75,26 +75,31 @@
 
   & .collapse,
   & .button,
-  & label:has(.checkbox) {
+  & label:has(.checkbox),
+  & .select {
     --depth: 1;
 
     @apply w-full border-x-0 border-b-0;
 
     & .collapse,
     & .button,
-    & label:has(.checkbox) {
+    & label:has(.checkbox),
+    & .select {
       --depth: 2;
       & .collapse,
       & .button,
-      & label:has(.checkbox) {
+      & label:has(.checkbox),
+      & .select {
         --depth: 3;
         & .collapse,
         & .button,
-        & label:has(.checkbox) {
+        & label:has(.checkbox),
+        & .select {
           --depth: 4;
           & .collapse,
           & .button,
-          & label:has(.checkbox) {
+          & label:has(.checkbox),
+          & .select {
             --depth: 5;
           }
         }
@@ -103,7 +108,9 @@
   }
 
   & .button,
-  & label:has(.checkbox) {
+  & label:has(.checkbox),
+  & .select,
+  & label:has(.select) span {
     padding-left: calc(var(--va-collapse-tree-indentation) + var(--va-collapse-padding) + var(--space));
   }
 }
